# Xenix

./: .env.example  .gitignore  AGENTS.md  Dockerfile.python  MIGRATION.md  README.md  docker-compose.yml  drizzle.config.ts  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  todo.md  uno.config.ts
app/components/: ArrayInput.vue  ColumnSelector.vue  ComparisonResults.vue  LanguageSwitcher.vue  LogPanel.vue  ManualTrainDialog.vue  ModelSelector.vue  ModelTuningTable.vue  PageHeader.vue  ParamGridDialog.vue  PredictionStep.vue  README.md  TaskLogViewer.vue  TrainingStep.vue  TuningResults.vue  TuningStep.vue  UploadStep.vue
app/composables/: useDialogManagement.ts  useFormatters.ts  useTableData.ts  useTrainingHistory.ts
app/models/regression/: AdaBoost.py  AdaBoost_Params.json  Bayesian_Ridge_Regression.py  Bayesian_Ridge_Regression_Params.json  GBDT.py  GBDT_Params.json  K-Nearest_Neighbors.py  (+32 more)
app/pages/: datasets.vue  index.vue  index.vue.backup  python-env.vue
docs/: COLUMN_SELECTOR.md  COMPARISON_REFACTORING.md  LOGGING.md  PR1_IMPLEMENTATION.md  PREDICTION_REFACTORING.md  STDIN_REFACTORING.md  WORKFLOW_SIMPLIFICATION.md  data-manager.md  testing-ml-pipeline.md
i18n/locales/: en.json  zh-CN.json
locales/: en.json  zh-CN.json
scripts/: migrate.js
server/api/: compare.post.ts  predict.post.ts  upload.post.ts
server/business/: mlPipeline.ts
server/database/: index.ts  schema.ts  utils.ts
server/plugins/: sync-models.ts
server/utils/: datasetUtils.ts  mlPipeline.ts  pythonExecutor.ts  taskUtils.ts
(+47 files in other folders)
